# platform

./: .gitignore  README.md
examples/: pythonEx.py
platform-aws/: platform-aws.cabal
platform-aws/app/: Main.hs
platform-aws/src/Platform/: AWS.hs
platform-aws/test/: Spec.hs
platform-deployment/: .gitignore  README.md  platform-deployment.cabal
platform-deployment/app/: Main.hs  PkgDep.hs
platform-deployment/src/Atidot/Platform/: Deployment.hs  Test.hs
platform-deployment/test/: Spec.hs
platform-deployment/test/Spec/: TestScripts.hs
platform-dsl/: platform-dsl.cabal
platform-dsl/app/: Main.hs
platform-dsl/src/Platform/: DSL.hs
platform-dsl/test/: Spec.hs
platform-harness/: harness.py  platform-harness.cabal
platform-harness-python/testApps/: producer.py
platform-harness/app/: Main.hs
platform-harness/pylib/: harness.py
platform-harness/src/Platform/: Harness.hs
platform-harness/src/Platform/Harness/: DSL.hs  Types.hs
platform-harness/test/: Spec.hs
platform-harness/testApps/: consumer.py  producer.py
platform-kube/: platform-kube.cabal
platform-kube/app/: Main.hs
platform-kube/src/Platform/: Kube.hs
platform-kube/test/: Spec.hs
platform-packaging/: platform-packaging.cabal
platform-packaging-types/: platform-packaging-types.cabal
platform-packaging-types/src/Platform/Packaging/: Types.hs
platform-packaging-types/src/Platform/Packaging/Pip/: Types.hs
platform-packaging-types/src/Platform/Packaging/Pip/Types/: Check.hs  Config.hs  Debug.hs  Download.hs  Freeze.hs  GeneralOpts.hs  Hash.hs  Input.hs  Install.hs  List.hs  Search.hs  Show.hs  Uninstall.hs  Utils.hs  Wheel.hs
platform-packaging-types/src/Platform/Packaging/PythonImports/: Types.hs
platform-packaging/app/: Main.hs
platform-packaging/src/: decorators.py  templating.py
platform-packaging/src/Platform/: Entrypoints.hs  Packaging.hs
platform-packaging/src/Platform/Packaging/: Extract.hs  Pip.hs  PythonImports.hs
platform-packaging/static/: base_main.py  pandas_main.py  parquet_main.py
platform-packaging/test/: Spec.hs  example.py
platform-process/: plaform-process.cabal
platform-process/app/: Main.hs
platform-process/src/Platform/: Process.hs
platform-process/test/: Spec.hs
platform-terraform/: platform-terraform.cabal
platform-terraform/app/: Main.hs
platform-terraform/src/Atidot/Platform/: Terraform.hs
platform-terraform/src/Platform/: Terraform.hs
platform-terraform/test/: Spec.hs
platform-types/: platform-types.cabal
platform-types/app/: Main.hs
platform-types/src/Platform/: Types.hs
platform-types/src/Platform/Types/: Default.hs  JSON.hs  (+2 more)
platform-visual/: platform-visual.cabal
platform-visual/app/: Main.hs
platform-visual/src/Platform/: Visual.hs
platform-visual/test/: Spec.hs
scripts/: package-deploy.sh  packaging-deployment.sh
static/testApp/consumer/: Dockerfile  consumer.py  messages_received.txt
static/testApp/producer/: Dockerfile  producer.py
test/: testPyToDocker.sh  undins.py
testDockers/consumer/: Dockerfile  Dockerfile.old  consumer.py
testDockers/consumer/python/: consumer.py
testDockers/producer/: Dockerfile
testDockers/producer/python/: harness.py  producer.old.py  producer.py
(+20 files in other folders)
