cabal-version:       2.2
name:                platform-packaging-types
version:             0.1.0.0
synopsis:            Platform Packaging
-- description:
homepage:            github.com/atidot/platform
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Atidot
maintainer:          devops@atidot.com
-- copyright:
category:            Other
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Platform.Packaging.Pip.Types
  -- other-extensions:
  build-depends:       base
                     , lens
                     , aeson
                     , data-default
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite platform-packaging-types-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base
                  , hspec
                  , platform-types
                  , platform-dsl
                  , platform-packaging-types
  ghc-options:      -Wall
  default-language: Haskell2010
